--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <span>
                     Membaca Cepat
                 </span>
-                <a class="button" href="{% url 'Skill_Pertama' %}">
+                <a class="button" href="skill1.html">
                     Lihat
                 </a>
             </div>
@@ -149,7 +149,7 @@
                 <span>
                     Menghafal Cepat
                 </span>
-                <a class="button" href="{% url 'Skill_Kedua' %}">
+                <a class="button" href="skill2.html">
                     Lihat
                 </a>
             </div>
@@ -162,7 +162,7 @@
                 <span>
                     Tidur Berkualitas
                 </span>
-                <a class="button" href="{% url 'Skill_Ketiga' %}">
+                <a class="button" href="skill3.html">
                     Lihat
                 </a>
             </div>
