--- a/skill1.html
+++ b/skill1.html
@@ -126,9 +126,9 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <a class="home" href="{% url 'index' %}">Skill Azhar</a>
+            <a class="home" href="index.html">Skill Azhar</a>
         </div>
-        <a class="back-to-home" href="{% url 'index' %}">
+        <a class="back-to-home" href="index.html">
             <i class="fas fa-arrow-left"></i> Back to Home
         </a>
     </div>
